Fixed overflowing input fields

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,4 @@
-/* TODO:
-Change color of submit button to blue
-Add CSS to article view , index and edit article pages.
- */
+
 
 body {
   margin: 0;
@@ -12,6 +9,10 @@ body {
   overflow: hidden;
   background-color: #f1f1f1;
   padding: 20px 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 100, 0.5);
+  display: block;
+  z-index: -1;
+
 }
 
 .header a {
@@ -59,7 +60,7 @@ body {
 
 /* Full-width input fields */
 input[type=email], input[type=text], input[type=password], textarea {
-  width: 100%;
+  width: 95%;
   padding: 15px;
   margin: 5px 0 22px 0;
   display: inline-block;
@@ -114,11 +115,14 @@ button:hover {
 
 .article_block{
   padding: 20px;
-  background-color: #f1eded;
+  background-color: #f1f1f1;
   width: 90%;
-  margin: 10px 50px 10px 50px;
-  box-shadow: 5px 5px #5cc0fa;
-  border-radius: 25px;
+  margin: 10px 50px 30px 50px;
+
+  box-shadow: 0 0 10px rgba(0, 0, 100, 0.5);
+  display: block;
+  z-index: -1;
+  
 }
 .heading{
   color: #5cc0fa;
